--- a/WindowsProxy/WindowsProxy.csproj
+++ b/WindowsProxy/WindowsProxy.csproj
@@ -1,19 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFrameworks>net5.0-windows;netcoreapp3.1;netstandard2.0</TargetFrameworks>
-        <LangVersion>latest</LangVersion>
-        <Nullable>enable</Nullable>
-        <Copyright>Copyright © HMBSbige 2020</Copyright>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Authors>HMBSbige</Authors>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageProjectUrl>https://github.com/HMBSbige/WindowsProxy</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/HMBSbige/WindowsProxy</RepositoryUrl>
-        <PackageTags>Windows proxy</PackageTags>
-        <Version>5.0.3</Version>
-        <PackageId>WindowsProxy</PackageId>
-        <Description>Query &amp; set Windows proxy.</Description>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>net5.0;netcoreapp3.1;netstandard2.0</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
+    <NoWarn>CS1591</NoWarn>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>HMBSbige</Authors>
+    <Copyright>Copyright © 2020 - 2021 HMBSbige</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/HMBSbige/WindowsProxy</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/HMBSbige/WindowsProxy</RepositoryUrl>
+    <PackageTags>Windows proxy</PackageTags>
+    <Version>5.0.3</Version>
+    <PackageId>WindowsProxy</PackageId>
+    <Description>Query &amp; set Windows proxy.</Description>
+  </PropertyGroup>
 
 </Project>
