--- a/WindowsProxy/WindowsProxy.csproj
+++ b/WindowsProxy/WindowsProxy.csproj
@@ -1,19 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netcoreapp3.1;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;netcoreapp3.1;netstandard2.0</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <NoWarn>CS1591</NoWarn>
+    <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>HMBSbige</Authors>
-    <Copyright>Copyright © 2020 - 2021 HMBSbige</Copyright>
+    <Copyright>Copyright © 2020-2022 HMBSbige</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/HMBSbige/WindowsProxy</PackageProjectUrl>
     <RepositoryUrl>https://github.com/HMBSbige/WindowsProxy</RepositoryUrl>
     <PackageTags>Windows proxy</PackageTags>
-    <Version>5.0.6</Version>
+    <Version>6.0.0</Version>
     <PackageId>WindowsProxy</PackageId>
     <Description>Query &amp; set Windows proxy.</Description>
   </PropertyGroup>
